# AgentGuard

./: .gitignore  README.md  package.json  pyproject.toml  skill.md
.claude/: settings.json
.github/workflows/: ci.yml
agentguard/: __init__.py  __main__.py  cli.py  config.py  hook.py  mcp_server.py  parsers.py  scanner.py  skill.py
agentguard/checks/: __init__.py  blocklist.py  feed.py  patterns.py  registry.py  repo.py  typosquat.py  virustotal.py
agentguard/data/: blocklist.json  popular_composer.txt  popular_npm.txt  popular_pypi.txt
docs/: index.html
scripts/: npm-postinstall.sh
tests/: test_parsers.py  test_scanner.py  test_typosquat.py
