[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.1.0"
description = "AI Agent Supply Chain Security - protect against malicious packages installed by AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Moamen Basel", email = "momenbasel@gmail.com" },
]
keywords = [
    "security",
    "supply-chain",
    "ai-agent",
    "typosquatting",
    "claude-code",
    "codex",
    "mcp",
    "hook",
    "package-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/momenbasel/AgentGuard"
Repository = "https://github.com/momenbasel/AgentGuard"
Issues = "https://github.com/momenbasel/AgentGuard/issues"

[project.scripts]
agentguard = "agentguard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
